fix bug elenco overflow/ sinopse serie

--- a/src/app/detalhes-filme/detalhes-filme.component.scss
+++ b/src/app/detalhes-filme/detalhes-filme.component.scss
@@ -176,7 +176,9 @@
   height: 100%;
 
   .elenco {
-    overflow-x: auto;
+    .elenco-grid{
+      overflow-x: auto;
+    }
 
     h3 {
       font-weight: 700;
