--- a/src/app/detalhes-serie/detalhes-serie.component.scss
+++ b/src/app/detalhes-serie/detalhes-serie.component.scss
@@ -1,10 +1,12 @@
 .header {
   color: white;
-  height: 675px;
+  background-size: cover !important;
+  height: 690px;
   box-shadow: 0 5px 8px rgb(0 0 0 / 20%);
   border: 1px solid rgba(var(--lightGrey), 1);
-  background-size: cover!important;
+
   .logo {
+
     background-color: #022541e5;
     height: 56px;
     margin: 0;
@@ -27,28 +29,29 @@
   }
   .detalhes {
     display: flex;
-    margin: 72px auto auto auto;
-    width: 80%;
+    margin: 65px auto auto auto;
+    width: 95%;
 
     .imagem {
       display: flex;
-      padding: 0 33px 0 0;
+      padding: 0 10px 0 0;
       margin-bottom: 20px;
 
       img {
         width: 383px;
-        height: 574px;
+        height: 594px;
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
         border-radius: 8px;
       }
     }
     .corpo-header {
-      padding: 20px;
+      padding: 15px;
       border-radius: 8px;
       margin-left: 10px;
       margin-bottom: 10px;
       height: max-content !important;
       background-color: #41414193;
+
 
       .titulo {
         font-weight: 700;
@@ -56,9 +59,10 @@
         line-height: 38px;
         height: auto;
         width: 95%;
+
       }
       .informacoes {
-        width: 100%;
+        width: 85%;
         font-weight: 400;
         font-size: 18px;
         line-height: 24px;
@@ -71,7 +75,6 @@
         font-size: 16px;
         align-items: center;
         margin-top: 16px;
-
 
         p {
           margin-top: 10px;
@@ -118,8 +121,8 @@
       }
 
       .sinopse {
-        width: 80%;
-        margin-top: 32px;
+        min-width: 70%;
+        margin-top: 20px ;
         height: auto;
         .titulo-sinopse {
           font-weight: 700;
@@ -128,7 +131,7 @@
         }
         p {
           font-weight: 400;
-          font-size: 16px;
+          font-size: 15.5px;
           line-height: 24px;
           letter-spacing: -0.005em;
         }
@@ -136,11 +139,10 @@
       .cast {
         margin-top: 24px;
         width: 50%;
-
         display: grid;
         grid-template-columns:
           minmax(160px, max-content)
-          repeat(auto-fill, 160px);
+          repeat(auto-fill, 190px);
         height: auto;
 
         mat-card-content {
@@ -174,7 +176,10 @@
   height: 100%;
 
   .elenco {
-    overflow-x: auto;
+    .elenco-grid{
+      overflow-x: auto;
+    }
+
 
     h3 {
       font-weight: 700;
